Fri Oct 18 17:31:27 2002  George Lebl <jirka@5z.com>

	* src/parse.y, src/lexer.l, src/eval.[ch], src/structs.h,
	  src/funclib.c, src/calc.c, src/dict.c: Add parameters (both user
	  and built in).  At some point they should also support value
	  verification/massage functions, but not so currently.

	* src/*.[ch]: warning fixes

	* lib/*/*.gel: minor cleanups and use parameters

Fri Oct 18 15:46:18 2002  George Lebl <jirka@5z.com>

	* src/eval.[ch], src/mpwrap.[ch], src/calc.c, src/parse.y,
	  src/lexer.l:  Add some element by element operators, add double
	  factorial operator

	* lib/linear_agebra/linear_algebra.gel: add some norm functions

	* lib/linear_agebra/misc.gel: add UpperTriangular and LowerTriangular
	  functions and IsVector function, and make some vector operations
	  work on both horizontal and vertical vectors

	* lib/combinatorics/factorial.gel: use !! for double factorial
	  function and add Factorial function

	* lib/funclib.c: more renaming and moving to the new definition macros

	* src/geniustests.txt: update

	* src/geniustest.pl: print error in red

Fri Oct 18 11:52:27 2002  George Lebl <jirka@5z.com>

	* lib/statistics/basic.gel: fix naming on RowAverage

Fri Oct 18 11:49:25 2002  George Lebl <jirka@5z.com>

	* src/funclib.c, src/mpwrap.[ch], src/matrixw.[ch], src/matop.[ch]:
	  Add a bunch of functions, make sqrt work nicely on perfect square
	  integers and rationals.  Add JacobiKronecker from gmp, use gmp
	  float unsigned long int power, add functions for checking
	  matrix values all at once, add a bunch of aliases.  Also
	  add a PerfectPower function

	* lib/*/*.gel: Do a bunch of renaming and add some help strings
	  and identify aliases.  Fix some minor bugs.  MakeDiagonal
	  can now take many value arguments.  Whack functions which
	  are built in or weren't implemented.  Implement DoubleFactorial.
	  Fix the symbolic nth power stuff, it can use PerfectSquare
	  PerfectPower and the standard sqrt function
