@@ -789,6 +789,8 @@ unescaped as they are for strings. Example:
 load program1.gel program2.gel
 load "Weird File Name With SPACES.gel"
 
+There are also cd, pwd and ls commands built in
+
 
 Calculator parameters:
 
