@@ -1,4 +1,19 @@
+*	Local variable substitution in functions should be done on stack pop
+	not on first seeing the function.
+
 *	Fix modular arithmetic to be correct (such as: "expr mod n")
+
+*	Help command rather then a function and allow having multiple
+	parameters
+
+*	Make README into a simple document to show on help, probably html
+	and show in a browser.
+
+*	Better yet help support, should be easy to document new functions
+
+*	When giving errors give file name line number somehow
+
+*	File editting
 
 *	Add user argument checking functions for parameters
 
