@@ -1,3 +1,10 @@
+Fri Oct 18 18:28:33 2002  George Lebl <jirka@5z.com>
+
+	* src/funclib.c: add chdir
+
+	* src/parse.y, src/lexer.l, src/calc.[ch]: add cd, pwd and ls
+	  commands, currently broken
+
 Fri Oct 18 17:31:27 2002  George Lebl <jirka@5z.com>
 
 	* src/parse.y, src/lexer.l, src/eval.[ch], src/structs.h,
